# cpp-standard

./: CMakeLists.txt  LICENSE  README.md
cmake/: warnings.cmake
src/: CMakeLists.txt  main.cpp
src/algorithms/nonmodifying/: all_of.cpp  any_of.cpp  find.cpp  for_each.cpp  none_of.cpp
